# shakespeare-elm

./: README.md  shakespeare-elm.cabal  stack.yaml
Text/: Elm.hs
